<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/icon_error" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/back_dialog_message"
        android:orientation="vertical"
        android:paddingBottom="30sp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_title_dialog_message"
            android:paddingStart="40dp"
            android:paddingTop="10dp"
            android:paddingEnd="40dp"
            android:paddingBottom="10dp"
            android:text="@string/error_404"
            android:textAppearance="@style/Cera_pro_black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/cera_pro_medium"
            android:text="@string/this_page_appears_to_be_unavailable_at_the_moment_try_reconnect_the_page_or_press_back"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_reconnect"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_back_button"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/reconnect"
        android:textAppearance="@style/Bungee_spice_regular"
        android:textColor="@drawable/selector_text_color_button"
        android:textSize="24sp" />

</androidx.appcompat.widget.LinearLayoutCompat>