<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/selector_ic_back" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@drawable/icon_info" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_dialog_message"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_xyz_info_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back_title_dialog_message"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="@string/examples_of_different_noise_levels"
                android:textAppearance="@style/Cera_pro_black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="@font/cera_pro_medium"
                android:text="@string/text_xyz_info_1"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/back_dialog_message"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_xyz_info_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back_title_dialog_message"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="@string/how_accelerometer_works"
                android:textAppearance="@style/Cera_pro_black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="@font/cera_pro_medium"
                android:text="@string/text_xyz_info_2"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>