<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/root_item"
    android:layout_height="52dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon_eye"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_eye_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:text="@string/user"
        android:textAppearance="@font/cera_pro_medium"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/text_current_date"
        app:layout_constraintStart_toEndOf="@id/icon_eye"
        app:layout_constraintTop_toTopOf="@id/icon_eye" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_current_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@font/cera_pro_medium"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@id/icon_eye"
        app:layout_constraintStart_toStartOf="@id/text_user"
        app:layout_constraintTop_toBottomOf="@id/text_user" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/start_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textAppearance="@font/cera_pro_medium"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/end_time_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/icon_eye" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_"
        android:textAppearance="@font/cera_pro_medium"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/start_time_value"
        app:layout_constraintTop_toTopOf="@id/start_time_value" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/end_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@font/cera_pro_medium"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/icon_eye"
        app:layout_constraintEnd_toEndOf="@id/start_time_value"
        app:layout_constraintTop_toBottomOf="@id/start_time_value" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end"
        android:textAppearance="@font/cera_pro_medium"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/end_time_value"
        app:layout_constraintEnd_toStartOf="@id/end_time_value" />

</androidx.constraintlayout.widget.ConstraintLayout>