<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fall.control.ui.home.buy_dialog.BuyDialog">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/selector_ic_back" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@drawable/icon_buy" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_dialog_message"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_xyz_info_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back_title_dialog_message"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="@string/free_trial_is_ended"
                android:textAppearance="@style/Cera_pro_black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="@font/cera_pro_medium"
                android:text="@string/to_use_the_sound_level_meter_you_need_to_purchase_a_paid_subscription"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button_buy"
            android:layout_width="130dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_back_button"
            android:gravity="center"
            android:text="@string/buy"
            android:textAppearance="@style/Bungee_spice_regular"
            android:textColor="@drawable/selector_text_color_button"
            android:textSize="24sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:indeterminate="false"
        android:visibility="gone"
        app:indicatorColor="@color/white" />

</FrameLayout>