<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fall.control.ui.home.timer_dialog.TimerDialog">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/selector_ic_back"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:focusable="true"
        android:orientation="vertical"
        android:clickable="true"
        android:layout_margin="30dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_timer" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/back_dialog_message"
            android:orientation="vertical"
            android:paddingBottom="50sp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back_title_dialog_message"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="@string/set_the_timer"
                android:textAppearance="@style/Cera_pro_black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cera_pro_medium"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/turns_off_the_control_mode_when_the_timer_expires"
                app:layout_constraintTop_toBottomOf="@id/title_info"
                android:layout_margin="15dp"/>

            <NumberPicker
                android:id="@+id/hours_picker"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:scaleY="1.3"
                android:scaleX="1.2"
                android:theme="@style/NumberPickerTheme"
                android:layout_marginTop="10dp"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:descendantFocusability="blocksDescendants"
                app:layout_constraintEnd_toStartOf="@id/colon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_description" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:textSize="26sp"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:textAppearance="@style/Bungee_spice_regular"
                app:layout_constraintTop_toTopOf="@id/hours_picker"
                app:layout_constraintBottom_toBottomOf="@id/hours_picker"
                app:layout_constraintStart_toEndOf="@id/hours_picker"
                app:layout_constraintEnd_toStartOf="@id/minutes_picker"/>

            <NumberPicker
                android:id="@+id/minutes_picker"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:scaleY="1.3"
                android:scaleX="1.2"
                android:layout_marginTop="10dp"
                android:theme="@style/NumberPickerTheme"
                android:descendantFocusability="blocksDescendants"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/colon"
                app:layout_constraintTop_toBottomOf="@id/text_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button_set"
            android:layout_width="130dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_back_button"
            android:gravity="center"
            android:text="@string/set"
            android:textAppearance="@style/Bungee_spice_regular"
            android:textColor="@drawable/selector_text_color_button"
            android:textSize="24sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/snack_bar_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

</FrameLayout>