<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fall.control.ui.start.StartFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/checkbox_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:visibility="visible"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button_start"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:background="@color/black"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/start"
            android:textAppearance="@style/Bungee_spice_regular"
            android:textColor="@drawable/selector_text_color_start_button"
            android:textSize="36sp"
            app:textAllCaps="true" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:visibility="gone"
            android:background="@color/black_20"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/check_box_back"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:visibility="gone"
            android:background="@color/black">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/check_box"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/selector_ic_checkbox"
                android:button="@null"
                app:layout_constraintBottom_toBottomOf="@id/text_privacy_policy"
                app:layout_constraintEnd_toStartOf="@id/text_privacy_policy"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_privacy_policy" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_privacy_policy"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="start"
                android:text="@string/i_acknowledge_and_accept_your"
                android:textAppearance="@style/Bungee_spice_regular"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/check_box"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_open_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="18dp"
                android:text="@string/policy"
                android:textAppearance="@style/Bungee_spice_regular"
                android:textColor="@drawable/selector_text_color_open_privacy_button"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/text_privacy_policy"
                app:layout_constraintEnd_toEndOf="@id/text_privacy_policy" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="80dp"
        android:indeterminate="true"
        app:indicatorColor="@color/white" />

</FrameLayout>